# pong-wasm

./: .gitignore  Cargo.toml  README.md  index.electron.js  index.html  package.json  preload.electron.js
.github/workflows/: npm-publish-github-packages.yml
assets/: index.html
src/: app.rs  ball.rs  game.rs  lib.rs  logic.rs  paddle.rs  ui.rs
