[package]
name = "pong-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[unstable]
build-std = ['std', 'panic_abort']

[build]
target = "wasm32-unknown-unknown"
rustflags = '-Ctarget-feature=+atomics,+bulk-memory'

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
wasm-bindgen-test = "0.3.0"
console_error_panic_hook = "0.1.7"
tau = "1.0.4"
js-sys = "0.3.60"


[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = [
    'console',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',

]